[package]
name = "ela"
version = "0.1.0"
description = "high perference proxy"
authors = ["Kilerd Chan <blove694@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
serde_derive = "1.0.93"
toml = "0.5.1"
futures = "0.1.28"
url = "1.7.2"
tokio = "1.9.0"
tokio-tls = "0.3.1"
rustls = "0.19.1"
hyper = "0.14.11"
